<resources>
    <string name="app_name">EZStudio</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to the Main Activity -->
    <string name="welcome">Welcome</string>
    <string name="open_project">Open</string>
    <string name="new_string">New</string>
    <string name="latest">Latest</string>
    <string name="title_activity_login">Sign in</string>
    <string name="choose_project_type">Choose project type</string>
    <string name="album">Album</string>
    <string name="track">Track</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="new_track_project">New Track Project</string>
    <string name="new_album_project">New Album Project</string>
    <string name="new_project">New project</string>
    <string name="release_date">Release Date</string>
    <string name="optional">Optional</string>
    <string name="release_date_optional">Release Date (optional)</string>
    <string name="no_recent_project">No recent project</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="empty">Empty</string>

</resources>
