<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_project_type"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5">

        <RadioGroup
            android:id="@+id/radio_type"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <RadioButton
                android:text="@string/track"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_track"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_album"
                android:layout_weight="1" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5">

        <Button
            android:id="@+id/btn_createProject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/create"
            android:background="@color/colorPrimary"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_cancelDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/cancel"
            android:background="@color/colorAccent"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>