<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.maxim.ezstudio.MainActivity">


    <RelativeLayout
        android:layout_weight=".6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:paddingRight="6dp"
        android:paddingLeft="6dp"
        android:background="@color/colorPrimary">

        <TextView
            android:text="USER TOTO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="10dp"
            android:id="@+id/userName" />

        <Button
            android:text="@string/open_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            style="?android:attr/borderlessButtonStyle"
            android:drawableLeft="@drawable/ic_open"
            android:id="@+id/bt_openProject" />

        <Button
            android:text="@string/new_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            style="?android:attr/borderlessButtonStyle"
            android:drawableLeft="@drawable/ic_new"
            android:id="@+id/bt_newProject" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="25dp"
            android:layout_below="@+id/userName"
            android:layout_alignParentStart="true"
            android:id="@+id/textView" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_weight=".2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

    </RelativeLayout>
</LinearLayout>
