<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.alfdp.ezstudio.MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="6dp"
            android:paddingLeft="6dp"
            android:paddingTop="30dp"
            android:background="@color/colorPrimary">

            <Button
                android:text="@string/open_project"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/borderlessButtonStyle"
                android:drawableLeft="@drawable/ic_open"
                android:textAlignment="textStart"
                android:id="@+id/bt_openProject" />

            <Button
                android:text="@string/new_string"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/borderlessButtonStyle"
                android:drawableLeft="@drawable/ic_new"
                android:textAlignment="textStart"
                android:id="@+id/bt_newProject" />


        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <TextView
                android:text="@string/latest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lb_latest"
                android:paddingLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="25dp"

                android:lineSpacingExtra="8sp"
                android:fontFamily="sans-serif" />

            <TextView
                android:id="@+id/lb_noRecentProject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:text="@string/no_recent_project"/>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:headerDividersEnabled="false"
                android:footerDividersEnabled="false"
                android:id="@+id/lv_recentProject" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>